2009-05-14  Sanel <karijes@users.sourceforge.net>

	* all: split libedelib to libedelib and libedelib_gui

2009-05-11  Sanel <karijes@users.sourceforge.net>

	* edelib/Regex.h:
	* src/Regex.cpp:
	* test/regex.cpp:
	* examples/elinks.cpp: replaced GNU regex engine with pcre; updated tests
	and elinks example
	* examples/icon_chooser.cpp: let it use edelib::Window

2009-04-22  Sanel <karijes@users.sourceforge.net>

	* === Released 2.0 alpha ===

2009-04-20  Sanel <karijes@users.sourceforge.net>

	* src/StrUtil.cpp: some valgrind warning fixup
	* src/rx/regex.h: __restrict_arr makes a lot of problems on NetBSD's gcc
	4.1.2 so this part is replaced with updated code found somewere on the net
	* test/mime.cpp: quick hack to prevent crashes on NetBSD, although better
	solution should be find

2009-04-18  Sanel <karijes@users.sourceforge.net>

	* m4/pkg.m4: removed obsolete line
	* m4/mime.m4: fix a bug with IFS, noticeable on ksh shell

2009-04-17  Sanel <karijes@users.sourceforge.net>

	* edelib/Config.h:
	* src/Config.cpp:
	* test/conf.cpp: removed usage of File class
	* m4/pkg.m4: ksh hack

2009-04-13  Sanel <karijes@users.sourceforge.net>

	* m4/jam.m4: check if we have broken jam's that does not correctly use
	return statement

2009-04-12  Sanel <karijes@users.sourceforge.net>

	* all: fixed some warnings generated by gcc's (>=4.3)
	* edelib.pc.in:
	* edelib-dbus.pc.in: dump URL key since it is not supported by older
	pkg-config versions

2009-04-10  Sanel <karijes@users.sourceforge.net>

	* test/UnitTest.h:
	* test/UnitTest.cpp:
	* test/run_tests.cpp: removed CDash output; added '--silent' command line
	option
	* test/UnitTest.cpp: failed tests will be sent to stderr; better output
	formatting
	* Jamrules: let 'jam tests' run unit tests
	* src/Debug.cpp: use fputs()
	* configure.in: check if env EDELIB_USE_LOCALDIR was set; if true, see
	local directory as install destination so .pc files can be called pointing
	to this directory
