@@ -1,6 +1,9 @@
 2009-05-14  Sanel <karijes@users.sourceforge.net>
 
 	* all: split libedelib to libedelib and libedelib_gui
+	* edelib-gui.pc.in:
+	* configure.in:
+	* Jamfile: added edelib-gui.pc.in
 
 2009-05-11  Sanel <karijes@users.sourceforge.net>
 
